small dummify edit

--- a/models/UPDATED-gradient-boosting-models.ipynb
+++ b/models/UPDATED-gradient-boosting-models.ipynb
@@ -1978,7 +1978,7 @@
     }
    ],
    "source": [
-    "## DUMMIFY categorical columns into numerical values 1,2,3,4 etc. ##\n",
+    "## DUMMIFY categorical columns into numerical values 0 or 1 ##\n",
     "\n",
     "\n",
     "# List categorical columns to be dummified for train/test\n",
