hyper parameter tuning of gbm

--- a/models/UPDATED-gradient-boosting-models.ipynb
+++ b/models/UPDATED-gradient-boosting-models.ipynb
@@ -5538,7 +5538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "405f18b4",
+   "id": "06c17492",
    "metadata": {},
    "source": [
     "## Tuning"
@@ -5547,7 +5547,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "08111aca",
+   "id": "78be1e87",
    "metadata": {},
    "outputs": [
     {
@@ -5624,7 +5624,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "aaaeb6be",
+   "id": "de155b8b",
    "metadata": {},
    "outputs": [
     {
@@ -5690,7 +5690,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d78d487a",
+   "id": "75d09d86",
    "metadata": {},
    "outputs": [
     {
@@ -5756,7 +5756,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "ea7b4f04",
+   "id": "4ed0d3ea",
    "metadata": {
     "scrolled": false
    },
@@ -5831,7 +5831,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "c37196e8",
+   "id": "59115099",
    "metadata": {},
    "outputs": [
     {
@@ -5895,7 +5895,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a1174eb8",
+   "id": "742a1c89",
    "metadata": {},
    "outputs": [
     {
@@ -5953,7 +5953,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "96243de0",
+   "id": "9a91f2ed",
    "metadata": {},
    "outputs": [
     {
@@ -5993,6 +5993,9 @@
     }
    ],
    "source": [
+    "## WARNING ## \n",
+    "## This takes 20+min to run ##\n",
+    "\n",
     "# Define the parameter grid to search\n",
     "param_grid = {\n",
     "    'learning_rate': [0.1, 0.05, 0.01],\n",
