--- a/Jason/Correlated_variables.ipynb
+++ b/Jason/Correlated_variables.ipynb
@@ -356,7 +356,7 @@
     }
    ],
    "source": [
-    "# Select only numeric columns from the DataFrame\n",
+    "# Selecting only numeric columns from the DataFrame\n",
     "numeric_cols = housing.select_dtypes(include=np.number).columns\n",
     "\n",
     "# Compute the correlation matrix\n",
