added random forest model in the models folder

--- a/Jason/Ran_forest_feature_selection.ipynb
+++ b/Jason/Ran_forest_feature_selection.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "8522448d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The nb_black extension is already loaded. To reload it, use:\n",
+      "  %reload_ext nb_black\n"
+     ]
+    },
     {
      "data": {
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 2;\n",
+       "                var nbb_cell_id = 4;\n",
        "                var nbb_unformatted_code = \"import numpy as np\\nimport pandas as pd\\nimport matplotlib.pyplot as plt\\nimport seaborn as sns\\nfrom sklearn.ensemble import RandomForestRegressor\\nfrom sklearn.model_selection import train_test_split\\nfrom sklearn.preprocessing import LabelEncoder\\n\\n\\n# the below extension properly formats a cell after it is run\\n%load_ext nb_black\\n\\n# Set the maximum number of rows to 200\\npd.set_option(\\\"display.max_rows\\\", 200)\\n\\n\\n# Set the maximum number of columns to 200\\npd.set_option(\\\"display.max_columns\\\", 200)\";\n",
        "                var nbb_formatted_code = \"import numpy as np\\nimport pandas as pd\\nimport matplotlib.pyplot as plt\\nimport seaborn as sns\\nfrom sklearn.ensemble import RandomForestRegressor\\nfrom sklearn.model_selection import train_test_split\\nfrom sklearn.preprocessing import LabelEncoder\\n\\n\\n# the below extension properly formats a cell after it is run\\n%load_ext nb_black\\n\\n# Set the maximum number of rows to 200\\npd.set_option(\\\"display.max_rows\\\", 200)\\n\\n\\n# Set the maximum number of columns to 200\\npd.set_option(\\\"display.max_columns\\\", 200)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -57,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "0d1428d3",
    "metadata": {},
    "outputs": [
@@ -66,7 +74,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 3;\n",
+       "                var nbb_cell_id = 5;\n",
        "                var nbb_unformatted_code = \"housing = pd.read_csv(\\\"../data/housing_corr.csv\\\")\";\n",
        "                var nbb_formatted_code = \"housing = pd.read_csv(\\\"../data/housing_corr.csv\\\")\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -95,15 +103,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "541cbdd4",
+   "execution_count": 6,
+   "id": "2ed62c3b",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 6;\n",
+       "                var nbb_unformatted_code = \"# Dropping columns not needed\\nhousing.drop(\\n    [\\\"PID\\\", \\\"Neighborhood_st\\\"], axis=1, inplace=True,\\n)\";\n",
+       "                var nbb_formatted_code = \"# Dropping columns not needed\\nhousing.drop(\\n    [\\\"PID\\\", \\\"Neighborhood_st\\\"], axis=1, inplace=True,\\n)\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Dropping columns not needed\n",
+    "housing.drop(\n",
+    "    [\"PID\", \"Neighborhood_st\"], axis=1, inplace=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "361f2d86",
+   "metadata": {},
+   "source": [
+    "## Looking for high high cardinality which could affect model output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "541cbdd4",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PID : number of values 2558\n",
       "SalePrice : number of values 914\n",
       "MSSubClass : number of values 16\n",
       "MSZoning : number of values 6\n",
@@ -141,7 +199,6 @@
       "HeatingQC : number of values 5\n",
       "CentralAir : number of values 2\n",
       "Electrical : number of values 4\n",
-      "2ndFlrSF : number of values 589\n",
       "BsmtFullBath : number of values 4\n",
       "BsmtHalfBath : number of values 3\n",
       "HalfBath : number of values 3\n",
@@ -153,13 +210,9 @@
       "Fireplaces : number of values 5\n",
       "GarageType : number of values 8\n",
       "GarageFinish : number of values 4\n",
-      "GarageArea : number of values 572\n",
+      "GarageCars : number of values 6\n",
       "GarageQual : number of values 6\n",
       "PavedDrive : number of values 3\n",
-      "WoodDeckSF : number of values 370\n",
-      "OpenPorchSF : number of values 237\n",
-      "EnclosedPorch : number of values 169\n",
-      "ScreenPorch : number of values 113\n",
       "Fence : number of values 5\n",
       "MoSold : number of values 12\n",
       "YrSold : number of values 5\n",
@@ -169,11 +222,10 @@
       "RemodAge : number of values 62\n",
       "TotalSF : number of values 1379\n",
       "Remodeled : number of values 2\n",
-      "TotalPorchSF : number of values 352\n",
       "TotalBath : number of values 11\n",
       "MSSubClass_cat : number of values 16\n",
       "Street_type : number of values 12\n",
-      "Neighborhood_st : number of values 501\n"
+      "TotalOutdoorSF : number of values 516\n"
      ]
     },
     {
@@ -181,7 +233,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 29;\n",
+       "                var nbb_cell_id = 7;\n",
        "                var nbb_unformatted_code = \"for name in housing.columns:\\n    print(name, \\\": number of values\\\", len(housing[name].value_counts()))\";\n",
        "                var nbb_formatted_code = \"for name in housing.columns:\\n    print(name, \\\": number of values\\\", len(housing[name].value_counts()))\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -210,43 +262,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "2ed62c3b",
+   "cell_type": "markdown",
+   "id": "3eab5437",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 30;\n",
-       "                var nbb_unformatted_code = \"housing.drop(\\n    [\\\"PID\\\", \\\"Neighborhood_st\\\"], axis=1, inplace=True,\\n)\";\n",
-       "                var nbb_formatted_code = \"housing.drop(\\n    [\\\"PID\\\", \\\"Neighborhood_st\\\"], axis=1, inplace=True,\\n)\";\n",
-       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
-       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
-       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
-       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
-       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
-       "                        }\n",
-       "                        break;\n",
-       "                    }\n",
-       "                }\n",
-       "            }, 500);\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "housing.drop(\n",
-    "    [\"PID\", \"Neighborhood_st\"], axis=1, inplace=True,\n",
-    ")"
+    "## Creating Bins for feature with high cardinality"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "592e71ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # List of high cardinality continuous variables\n",
+    "# high_cardinality_variables = [\n",
+    "#      'LotArea', 'MasVnrArea', 'BsmtFinSF1', 'BsmtFinSF2', 'BsmtUnfSF',\n",
+    "#      'TotalOutdoorSF', 'Age', 'RemodAge', 'TotalSF'\n",
+    "# ]\n",
+    "\n",
+    "# # Define the number of bins (you can adjust this value as needed)\n",
+    "# num_bins = 20\n",
+    "\n",
+    "# # Apply quantile-based binning to each high cardinality variable\n",
+    "# for var in high_cardinality_variables:\n",
+    "#     housing[f\"{var}_binned\"] = pd.qcut(housing[var], q=num_bins, duplicates='drop', labels=False)\n",
+    "#     housing = housing.drop(var, axis=1)  # Dropping the original variable"
    ]
   },
   {
