cleanup linear notebook

--- a/models/LinearModels.ipynb
+++ b/models/LinearModels.ipynb
@@ -2,7 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
+   "id": "459eb54d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score, RepeatedKFold\n",
+    "from sklearn.linear_model import LinearRegression, Ridge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "be8cc2dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the Ames, Iowa housing dataset\n",
+    "data = pd.read_csv('../data/housing_corr.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7c5ac41",
+   "metadata": {},
+   "source": [
+    "## Simple Linear Regression Using TotalSF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "55c541d1",
    "metadata": {},
    "outputs": [
@@ -15,13 +46,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score, RepeatedKFold\n",
-    "from sklearn.linear_model import LinearRegression, Ridge\n",
-    "\n",
-    "# Load the Ames, Iowa housing dataset\n",
-    "data = pd.read_csv('../data/housing_corr.csv')\n",
-    "\n",
     "# Split the data into training and test sets\n",
     "train_data, test_data = train_test_split(data, test_size=0.2, random_state=42)\n",
     "\n",
@@ -45,8 +69,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "349b4b85",
+   "metadata": {},
+   "source": [
+    "## Simple Linear Regression Using OverallQual"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "85e5d51e",
    "metadata": {},
    "outputs": [
@@ -82,30 +114,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74cfdbbf",
+   "metadata": {},
+   "source": [
+    "## Multiple Linear Regression using OverallQual & TotalSF"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f2588072",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'train_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Extract the independent and dependent variables from both dataframes\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m X_train \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_df\u001b[49m[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOverallQual\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotalSF\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[1;32m      3\u001b[0m y_train \u001b[38;5;241m=\u001b[39m train_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSalePrice\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalues\n\u001b[1;32m      5\u001b[0m X_test \u001b[38;5;241m=\u001b[39m test_df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOverallQual\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotalSF\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'train_df' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean R-squared score: 0.7922531106792267\n"
      ]
     }
    ],
    "source": [
     "# Extract the independent and dependent variables from both dataframes\n",
-    "X_train = train_df[['OverallQual', 'TotalSF']]\n",
-    "y_train = train_df['SalePrice'].values\n",
+    "X_train = train_data[['OverallQual', 'TotalSF']]\n",
+    "y_train = train_data['SalePrice'].values\n",
     "\n",
-    "X_test = test_df[['OverallQual', 'TotalSF']]\n",
-    "y_test = test_df['SalePrice'].values\n",
+    "X_test = test_data[['OverallQual', 'TotalSF']]\n",
+    "y_test = test_data['SalePrice'].values\n",
     "\n",
     "# Create a LinearRegression model and fit it on the training data\n",
     "model = LinearRegression()\n",
@@ -122,8 +158,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "553ded4b",
+   "metadata": {},
+   "source": [
+    "## Dummify categorical Values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "d1ff4801",
    "metadata": {},
    "outputs": [
@@ -364,7 +408,7 @@
        "[5 rows x 749 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,46 +425,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7511ca44",
+   "metadata": {},
+   "source": [
+    "## Ridge Regression with all 749 Columns..."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8f2cf992",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py:196: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "  warnings.warn(\n",
+      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py:196: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "  warnings.warn(\n",
+      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py:196: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "  warnings.warn(\n",
+      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py:196: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "  warnings.warn(\n",
+      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py:196: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "  warnings.warn(\n",
+      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py:196: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "  warnings.warn(\n",
+      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py:196: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "  warnings.warn(\n",
+      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py:196: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "  warnings.warn(\n",
+      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py:196: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "  warnings.warn(\n",
+      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py:196: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "  warnings.warn(\n",
+      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py:196: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "  warnings.warn(\n",
+      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py:196: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "  warnings.warn(\n",
+      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py:196: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "  warnings.warn(\n",
+      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py:196: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average R-squared score: nan\n"
+      "Average R-squared score: 0.802942575245318\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_validation.py:372: FitFailedWarning: \n",
-      "15 fits failed out of a total of 15.\n",
-      "The score on these train-test partitions for these parameters will be set to nan.\n",
-      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
-      "\n",
-      "Below are more details about the failures:\n",
-      "--------------------------------------------------------------------------------\n",
-      "15 fits failed with the following error:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_validation.py\", line 680, in _fit_and_score\n",
-      "    estimator.fit(X_train, y_train, **fit_params)\n",
-      "  File \"/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py\", line 1003, in fit\n",
-      "    X, y = self._validate_data(\n",
-      "  File \"/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py\", line 581, in _validate_data\n",
-      "    X, y = check_X_y(X, y, **check_params)\n",
-      "  File \"/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/utils/validation.py\", line 964, in check_X_y\n",
-      "    X = check_array(\n",
-      "  File \"/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/utils/validation.py\", line 746, in check_array\n",
-      "    array = np.asarray(array, order=order, dtype=dtype)\n",
-      "  File \"/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/pandas/core/generic.py\", line 2064, in __array__\n",
-      "    return np.asarray(self._values, dtype=dtype)\n",
-      "ValueError: could not convert string to float: 'RL'\n",
-      "\n",
-      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n"
+      "/Users/bschmidt/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_ridge.py:196: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -450,8 +514,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "147de249",
+   "metadata": {},
+   "source": [
+    "## Lasso Regression with all 749 Columns..."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "77347a2b",
    "metadata": {},
    "outputs": [
