cleanup linear model

--- a/models/Gradient-boosting-model.ipynb
+++ b/models/Gradient-boosting-model.ipynb
@@ -314,7 +314,7 @@
     }
    ],
    "source": [
-    "# Features Removed for Correlation Issues\n",
+    "# List of features that were removed for correlation issues\n",
     "set1 = set(housing_raw.columns)\n",
     "set2 = set(housing_clean.columns)\n",
     "set3 = set(housing_corr.columns)\n",
