testing branch functionality

--- a/models/LinearModels.ipynb
+++ b/models/LinearModels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7274b115",
+   "id": "274ea344",
    "metadata": {},
    "source": [
     "# Linear Models\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77ec7d86",
+   "id": "9cf8b8f5",
    "metadata": {},
    "source": [
     "## Load Packages and Data"
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "db8399ff",
+   "id": "3eeda56b",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "56ac93eb",
+   "id": "bc95cf0e",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f527cac",
+   "id": "0a480933",
    "metadata": {},
    "source": [
     "## Simple Linear Regression"
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "549886fe",
+   "id": "d21286ae",
    "metadata": {},
    "source": [
     "#### Using TotalSF as Predictor"
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e2e7ada",
+   "id": "4eb1045a",
    "metadata": {},
    "source": [
     "#### Using OverallQual as Predictor"
@@ -294,16 +294,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47f9158a",
+   "id": "21cbe00b",
    "metadata": {},
    "source": [
     "## Multiple Linear Regression using OverallQual & TotalSF"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6f5e9672",
+   "metadata": {},
+   "source": [
+    "testing testing testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90106a20",
+   "id": "c17c7552",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37657ad2",
+   "id": "e4077789",
    "metadata": {},
    "source": [
     "## Dummify categorical Values"
@@ -387,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "041b75f5",
+   "id": "ebe24072",
    "metadata": {},
    "source": [
     "## Ridge Regression with all 749 Columns..."
@@ -426,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c5ef1e1",
+   "id": "2597908d",
    "metadata": {},
    "source": [
     "## Lasso Regression with all 749 Columns..."
