testing branch functionality

--- a/models/LinearModels.ipynb
+++ b/models/LinearModels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "274ea344",
+   "id": "4e691ba9",
    "metadata": {},
    "source": [
     "# Linear Models\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf8b8f5",
+   "id": "0cbe1d1d",
    "metadata": {},
    "source": [
     "## Load Packages and Data"
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3eeda56b",
+   "id": "23904b7c",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bc95cf0e",
+   "id": "1a451698",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a480933",
+   "id": "42d796bb",
    "metadata": {},
    "source": [
     "## Simple Linear Regression"
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d21286ae",
+   "id": "6a2dc869",
    "metadata": {},
    "source": [
     "#### Using TotalSF as Predictor"
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eb1045a",
+   "id": "76b45440",
    "metadata": {},
    "source": [
     "#### Using OverallQual as Predictor"
@@ -294,24 +294,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21cbe00b",
+   "id": "992dfcb0",
    "metadata": {},
    "source": [
     "## Multiple Linear Regression using OverallQual & TotalSF"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9e30831",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TESTING"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "6f5e9672",
+   "id": "9949653e",
    "metadata": {},
    "source": [
-    "testing testing testing"
+    "asdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b29d6c32",
+   "metadata": {},
+   "source": [
+    "testing testing testing Testinga"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c17c7552",
+   "id": "10ce0b74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4077789",
+   "id": "df448b95",
    "metadata": {},
    "source": [
     "## Dummify categorical Values"
@@ -395,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebe24072",
+   "id": "39d2d774",
    "metadata": {},
    "source": [
     "## Ridge Regression with all 749 Columns..."
@@ -434,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2597908d",
+   "id": "dfacc6f9",
    "metadata": {},
    "source": [
     "## Lasso Regression with all 749 Columns..."
