--- a/models/Random_forest_model.ipynb
+++ b/models/Random_forest_model.ipynb
@@ -63,7 +63,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "\n",
-    "# import seaborn as sns\n",
+    "import seaborn as sns\n",
     "# from sklearn.ensemble import RandomForestRegressor\n",
     "# from sklearn.preprocessing import LabelEncoder\n",
     "# from sklearn.model_selection import cross_val_score, KFold\n",
