Optimizing Ridge and Lasso, fix dummification, and cleaning up notebook

--- a/models/Gradient-boosting-model.ipynb
+++ b/models/Gradient-boosting-model.ipynb
@@ -917,6 +917,7 @@
     "    y0,\n",
     "    random_state=42,\n",
     "    test_size=0.3,  # stratify=housing_corr[\"Neighborhood\"] # commenting out for now\n",
+    "    shuffle=True\n",
     ")\n",
     "\n",
     "# Colinear Columns Removed\n",
@@ -927,6 +928,7 @@
     "    y,\n",
     "    random_state=42,\n",
     "    test_size=0.3,  # stratify=housing_corr[\"Neighborhood\"] # commenting out for now\n",
+    "    shuffle=True\n",
     ")"
    ]
   },
