adding more visuals for presentation

--- a/models/Random_forest_model.ipynb
+++ b/models/Random_forest_model.ipynb
@@ -4207,7 +4207,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "c91249ef",
+   "id": "82a97895",
    "metadata": {},
    "outputs": [
     {
@@ -13161,6 +13161,51 @@
    ],
    "source": [
     "shap_values = explainer.shap_values(X_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f13f212",
+   "metadata": {},
+   "source": [
+    "#### Town Names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "316525a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#        Blmngtn\tBloomington Heights\n",
+    "#        Blueste\tBluestem\n",
+    "#        BrDale\tBriardale\n",
+    "#        BrkSide\tBrookside\n",
+    "#        ClearCr\tClear Creek\n",
+    "#        CollgCr\tCollege Creek\n",
+    "#        Crawfor\tCrawford\n",
+    "#        Edwards\tEdwards\n",
+    "#        Gilbert\tGilbert\n",
+    "#        Greens\tGreens\n",
+    "#        GrnHill\tGreen Hills\n",
+    "#        IDOTRR\tIowa DOT and Rail Road\n",
+    "#        Landmrk\tLandmark\n",
+    "#        MeadowV\tMeadow Village\n",
+    "#        Mitchel\tMitchell\n",
+    "#        Names\tNorth Ames\n",
+    "#        NoRidge\tNorthridge\n",
+    "#        NPkVill\tNorthpark Villa\n",
+    "#        NridgHt\tNorthridge Heights\n",
+    "#        NWAmes\tNorthwest Ames\n",
+    "#        OldTown\tOld Town\n",
+    "#        SWISU\tSouth & West of Iowa State University\n",
+    "#        Sawyer\tSawyer\n",
+    "#        SawyerW\tSawyer West\n",
+    "#        Somerst\tSomerset\n",
+    "#        StoneBr\tStone Brook\n",
+    "#        Timber\tTimberland\n",
+    "#        Veenker\tVeenker"
    ]
   },
   {
